fixed the width view on mobile device

--- a/style.css
+++ b/style.css
@@ -11,15 +11,19 @@
  --fontcolor1:#051937;
  --fontcolor2: #a8eb12;
 }
+
 *{
  margin:0;
  padding:0;
- box-sizing:border-box;
 }
-
+/* *::before, ::after{
+ box-sizing:inherit;
+} */
 
 body{
  background-image: linear-gradient(270deg, var(--color3), var(--color2));
+ font-size:16px;
+ overflow-x:hidden;
 }
 
 h1{
@@ -48,39 +52,49 @@ border-bottom: 5px solid var(--color2);
 #navbar{
  background-color: var(--fontcolor1);
  display: flex;
- justify-content: space-between;
- padding:0 4rem;
- padding-top: 1rem;
- padding-bottom: 1rem;
+ justify-content:space-between;
+ align-items:center;
  font-weight:bold;
  position:fixed;
+ padding-left:3rem;
+ padding-bottom:1.6rem;
  top:0;
  left:0;
  width:100%;
+ z-index:1;
 }
 #navbar ul li{
  list-style: none;
 }
 #navbar ul{
  display:flex;
- column-gap:50px;
- font-size: 1.8rem;
+ gap:3rem;
+ padding-right:6rem;
+ font-size: 1.4rem;
 }
 
+
+
 #welcome-section{
-width:100%;
 height: 100vh;
 display:flex;
 flex-direction:column;
-align-items:center;
 justify-content:center;
+align-items:center;
 background-color: var(--color7);
-padding-left:4rem;
+position:relative;
+top:0;
+left:0;
+right:0;
+z-index:-1;
+width:100%;
+height:100vh;
+padding-left: 4rem;
 padding-right:4rem;
 }
 .my-img{
- width:350px;
- height:350px;
+ width:320px;
+ height:320px;
  border-radius:15px;
  border:10px solid var(--color7);
 }
@@ -95,10 +109,12 @@ padding-right:4rem;
 
 #About{
  width:100%;
+ height:100vh;
  padding-left: 4rem;
  padding-right:4rem;
  background-color: var(--fontcolor1);
 }
+
 .about-h2{
  text-align:center;
  font-size:4rem;
@@ -113,18 +129,18 @@ padding-right:4rem;
 }
 .container-about{
  display:flex;
- justify-content: start;
- column-gap: 4rem;
  align-items:center;
+ gap: 1.8rem;
  padding-bottom:3rem;
  padding-top:3rem;
 }
 .notes{
- line-height:1.5;
+ line-height:1.8;
  color: var(--color7);
+ padding-left:0.4rem;
 }
 #About p{
- font-size: 1.5rem;
+ font-size: 1.4rem;
  text-align:left;
 }
 
@@ -143,28 +159,40 @@ padding-right:4rem;
 
 #Contact{
  background-color:var(--color6);
- width:100%;
- height:400px;
  font-size: 3rem;
  text-align:center;
- padding-top: 100px;
+ padding-top: 2rem;
  color:var(--color7);
  line-height:1.4;
+ display:flex;
+ flex-wrap:wrap;
+ flex-direction:column;
+ justify-content:center;
+ align-items:center;
+ width:100%;
+ height:100vh;
+ padding-left: 3rem;
+ padding-right:4rem;
 }
 
 .social-media{
- padding-top: 2rem;
+ padding-top: 0;
+ width:100%;
 }
 
 .social-icon{
- width:30px;
+ width:2.5rem;
  border-radius: 10px;
+ padding-bottom:2rem;
+ padding-top:1.8rem;
 }
 
 #projects{
- width:100%;
  background-color: var(--color7);
  padding-bottom:4rem;
+ width:100%;
+ padding-left: 4rem;
+ padding-right:4rem;
 }
 
 
@@ -203,14 +231,15 @@ padding-right:4rem;
  text-align:center;
 }
 
-
 #main-footer{
  background-color:var(--fontcolor1);
  color: var(--treedom2);
  display:flex;
- justify-content:space-between;
+ justify-content:start;
+ column-gap: 45rem;
  font-size:1.3rem;
  padding: 1rem 4rem;
+ width:100%;
 }
 
 .privacy{
@@ -219,6 +248,9 @@ padding-right:4rem;
 }
 
 @media only screen and  (max-width: 720px){
+ html{
+  font-size:70%;
+ }
  #navbar{
   display:flex;
   flex-wrap: wrap;
@@ -232,26 +264,53 @@ padding-right:4rem;
   border-bottom: 5px solid var(--treedom2);
  }
  #welcome-section{
-  width:100vw;
+  width:100%;
   display:flex;
   align-items:center;
   justify-content:center;
   text-align:center;
-  padding-top:6rem;
-  font-size: 2rem;
+  padding-top:8rem;
+  height:100%;
+  padding-bottom: 3rem;
+  padding-right:3rem;
  }
- #main-container{
-  width: 100%;
+ #About{
+  height:100%;
  }
+ #projects, .project-work{
+  width:100%;
+ }
+#projects{
+ padding-left:2rem;
+}
+ #Contact{
+  font-size:2rem;
+  text-align:center;
+ }
+#main-container{
+ position:absolute;
+ left:0;
+ right:0;
+ width:100%;
+ padding:0;
+ margin:0;
+}
  .container-about{
-  width:100vw;
+  width:100%;
+  height:100%;
+  line-height:1.6;
   display:flex;
   flex-wrap:wrap;
   gap:15px;
  }
-
+ .skill{
+  background-color: var(--color6);
+  padding:1px 2px;
+  border-radius: 5px;
+  color:var(--color7);
+ }
  #main-footer{
-  width:100vw;
+  width:100%;
   display:flex;
   flex-wrap: wrap;
   gap:15px;
